--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
-body{
+html, body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+.homePage-background{
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    top: -160px;
+}
+
+.bg-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: url("images/joanna-kosinska-4dnG4q3kxdg-unsplash\ \(1\).jpg")center center/cover no-repeat;
+    transform: scale(1);
+    transform-origin: center center;
+    z-index: 1;
+}
+
+main {
+    min-height: 180vh;
+    background: #f6f7fb;
     
 }
