--- a/contactPage.css
+++ b/contactPage.css
@@ -37,15 +37,27 @@ main {
 }
 
 .contact-heading{
+    opacity: 0;
+    transform: translateY(140px);
     font-size: 140px;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background: linear-gradient(to bottom, white 50%, rgb(122, 0, 43) 50%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 0.5px white;
+    -webkit-text-stroke: 1px white;
     display: inline-block;
     margin-left: 40px;
     margin-bottom: 72px;
     z-index: 1;
+}
+
+#svg-container{
+    border: 1px solid black;
+    height: 200px;
+    width: 200px;
+    position: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(80%, -20%);
 }
