--- a/contactPage.css
+++ b/contactPage.css
@@ -67,9 +67,10 @@ main {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px white;
     display: inline-block;
-    margin-left: 100px;
+    margin-left: 40px;
     margin-top: 150px;
     z-index: 1;
+    transform: translateY(0);
 }
 
 /* SVG MotionPath work*/
