--- a/atKlavaPage.css
+++ b/atKlavaPage.css
@@ -142,6 +142,18 @@ main {
     font-size: 20px; 
     margin: 0.6rem 0;
     list-style: none;
+    transition:all 0.3 ease;
+    padding: 8px 12px;
+    border-bottom: 1px solid #eee;
+}
+
+.menu-list ul li:hover {
+    color: #AC1634;
+    cursor: pointer;
+}
+
+.menu-list ul li + li {
+    margin-top: 9px;
 }
 
 /*cakes heading*/
