--- a/aboutPage.css
+++ b/aboutPage.css
@@ -147,10 +147,10 @@ main {
 /*Black Address box with its info*/
 .address-section{
     position: absolute;
-    left: 10%;
+    right: 0;
     top: 0;
     height: 375px;
-    width: 725px;
+    width: 525px;
     border: 1px solid black;
     background-color: black;
 }
