--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html, body{
 }
 
 main {
-    min-height: 500vh; /*the height everywhere else is auto !important*/
+    min-height: 650vh; /*the height everywhere else is auto !important*/
     background: #f6f7fb;
 }
 
@@ -138,7 +138,7 @@ h1{
     text-decoration: none;
     display: inline-block;
     transition: all 0.3s ease;
-    margin-bottom: 12rem;
+    margin-bottom: 14rem;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.281);
 }
 
@@ -160,6 +160,7 @@ h1{
     grid-template-rows: 250px; /*default row height*/
     gap: 1rem;
     margin: 2rem 0;
+    margin-bottom: 14rem; /*puts the space between the gallery and Our blogs heading*/
 }
 
 /*Image styles*/
@@ -184,4 +185,129 @@ h1{
 .gallery-link img:hover {
     filter: grayscale(100%) brightness(60%);
     cursor: pointer;
+}
+
+/*The Our Blogs section*/
+#blogs-heading {
+    text-align: left;
+    width: 100%;
+}
+
+
+.feature-section {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem; /*space between boxes*/
+    max-width: 1200px;
+    margin: 5rem auto;
+    padding: 0 2rem;
+    flex-wrap: wrap; /*ensures responsiveness*/
+    margin-bottom: 14rem; /*adds spac at the bottom from the next contact us title*/
+}
+
+.feature-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%; /*roughly half the container width*/
+    text-align: center;
+}
+
+.feature-link img {
+    width: 420px;
+    height: 400px;
+    object-fit: cover;
+    transition: all 0.3 ease;
+}
+
+.feature-link:hover img {
+    filter: grayscale(100%) brightness(70%);
+    cursor: pointer;
+}
+
+.feature-description {
+    margin-top: 1rem;
+    font-size: 18px;
+    line-height: 1.6;
+    color: #333;
+}
+
+/*Black Address box with its info*/
+.address-section{
+    height: 375px;
+    width: 630px;
+    border: 1px solid black;
+    background-color: black;
+}
+
+.address-section h2{
+    font-size: 28px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: rgb(250, 230, 206);
+    padding: 35px;
+}
+
+#address-links, address{
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: beige;
+    font-style: normal;
+    text-decoration: none;
+    padding: 10px 35px;
+}
+
+#address-links{
+    padding: 2px;
+}
+
+.address-section p{
+    font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: beige;
+    padding: 10px 35px;
+}
+
+.address-section button{
+    height: 40px;
+    width: 110px;
+    font-size: 15px;
+    color: beige;
+    border-radius: 25px;
+    border: 1px solid beige;
+    background-color: transparent;
+    cursor: pointer;
+    margin-left: 35px;
+    margin-top: 15px;
+}
+
+.address-section button:hover{
+    color: black;
+    background-color: beige;
+}
+
+.klava-cake{
+    width: 420px;
+    height: 375px;
+    object-fit: cover;
+    transition: all 0.3 ease;
+}
+
+/*KLAVA's signature*/
+.klava-signature{
+    height: 200px;
+    width: 600px;
+    margin-left: 500px;
+    margin-top: 50px;
+}
+
+#svg-signature{
+    width: 600px;
+    height: 200px;
+    display: block;
+}
+
+#signature{
+    fill: none;
+    stroke: #000;
+    stroke-width: 3;
 }
