--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html, body{
 }
 
 main {
-    min-height: 650vh; /*the height everywhere else is auto !important*/
+    min-height: 600vh; /*the height everywhere else is auto !important*/
     background: #f6f7fb;
 }
 
@@ -161,6 +161,11 @@ h1{
     gap: 1rem;
     margin: 2rem 0;
     margin-bottom: 14rem; /*puts the space between the gallery and Our blogs heading*/
+}
+
+/*Gallery staggering*/
+.gallery span{
+    display: block; 
 }
 
 /*Image styles*/
